quick fix on collapsed user profile controls

--- a/app/assets/stylesheets/desktop/user.scss
+++ b/app/assets/stylesheets/desktop/user.scss
@@ -325,6 +325,7 @@
   .about.collapsed-info {
     .controls {
       margin-top: 0;
+      width: auto;
       ul {
         li {display: inline;}
         a {
